--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ body {
 .marquee-element {
   display: inline-block;
   padding-left: 100%;
-  animation: marquee 10s linear infinite;
+  animation: marquee 10s cubic-bezier(0,.5,1,.5) infinite;
 }
 
 @keyframes marquee {
